# EclipseCraft

./: .gitmodules  Buffers.c  Buffers.h  CMakeLists.txt  README.md  Shaders.c  Shaders.h  app.c  app.h  debug.c  debug.h  frag.txt  glad.c  header.h  main.c  texture.c  texture.h  vertex.txt  voxel.c  voxel.h
platform/src/: Buffers.c  Shaders.c  Shaders.h  camera.c  camera.h  debug.h  glad.c  global_vars.h  main.c  mytypes.h  texture.c  texture.h  time.h  voxel.c  voxel.h  world.c  world.h
